# loco-dart

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  setup.py
_legacy/include/: dart_common.h  dart_config.h  dart_simulation.h
_legacy/include/adapters/: dart_body_adapter.h  dart_collision_adapter.h
_legacy/src/adapters/: dart_body_adapter.cpp  dart_collision_adapter.cpp
_legacy/tests/: test_basic.cpp
_legacy/tests/base/: test_interface.cpp
examples/cpp/primitives/: CMakeLists.txt  test_hfield.cpp  test_primitives.cpp  test_stack.cpp
ext/: CMakeLists.txt
include/: dart_common.h  dart_config.h  dart_utils.h  loco_common_dart.h  loco_simulation_dart.h
include/adapters/: dart_body_adapter.h  dart_collision_adapter.h  loco_collision_adapter_dart.h  loco_single_body_adapter_dart.h
include/kinematic_trees/: loco_kinematic_tree_adapter_dart.h  loco_kinematic_tree_body_adapter_dart.h  loco_kinematic_tree_collider_adapter_dart.h  loco_kinematic_tree_joint_adapter_dart.h
include/primitives/: loco_single_body_adapter_dart.h  loco_single_body_collider_adapter_dart.h  loco_single_body_constraint_adapter_dart.h
scripts/: fetch_dependencies.sh  remove_dependencies.sh  remove_submodules.sh  setup_dependencies.sh  status_dependencies.sh
src/: dart_common.cpp  dart_simulation.cpp  dart_utils.cpp  loco_common_dart.cpp  loco_simulation_dart.cpp
src/adapters/: dart_body_adapter.cpp  loco_collision_adapter_dart.cpp  loco_single_body_adapter_dart.cpp
src/kinematic_trees/: loco_kinematic_tree_collider_adapter_dart.cpp  loco_kinematic_tree_joint_adapter_dart.cpp
src/primitives/: loco_single_body_adapter_dart.cpp  loco_single_body_collider_adapter_dart.cpp  loco_single_body_constraint_adapter_dart.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_multibody.cpp
tests/base/: CMakeLists.txt  test_interface.cpp  test_interface.h
tests/cpp/: CMakeLists.txt  test_runtime_raisim_backend.cpp
tests/cpp/dart/: CMakeLists.txt  test_collision_adapter_dart.cpp  test_single_body_adapter_dart.cpp
tests/cpp/generic/: CMakeLists.txt  test_runtime_dart_backend.cpp
tests/python/: test_runtime_raisim_backend.py
